# python-template

./: .coverage  .dockerignore  .dvcignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  README.md.jinja  SECURITY.md  copier.yaml  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml  pyproject.toml.jinja
.claude/: settings.json
.claude/commands/: fix-issue.md  validate.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  SECURITY.md  copilot-instructions.md  copilot-instructions.md.jinja  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  commit-lint.yml  dependabot-auto-merge.yml  docs.yml  pr-title.yml  publish.yml  validate-template.yml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: api.md  ci-cd.md  contributing.md  docker.md  getting-started.md  index.md  ml-setup.md  releasing.md
extensions/: context.py
scripts/: init.sh
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/changelog/: index.html
site/ci-cd/: index.html
site/contributing/: index.html
site/docker/: index.html
site/getting-started/: index.html
site/ml-setup/: index.html
site/releasing/: index.html
site/search/: search_index.json
src/project_name/: __init__.py  config.py  main.py
template/: .dockerignore  .gitignore  .pre-commit-config.yaml.jinja  CLAUDE.md.jinja  README.md.jinja  alembic.ini.jinja  justfile.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  {%- if use_docs -%}mkdocs.yml{%- endif -%}.jinja  {%- if use_ml -%}.env.example{%- endif -%}
template/.claude/: settings.json.jinja
template/.devcontainer/: devcontainer.json  devcontainer.json.jinja
template/.github/: CONTRIBUTING.md  copilot-instructions.md.jinja  dependabot.yml  pull_request_template.md
template/alembic/: env.py.jinja
template/config/: device.yaml.example.jinja
template/docker/: Dockerfile.gpu.jinja
template/docs/: changelog.md  ci-cd.md.jinja  getting-started.md.jinja  index.md.jinja  releasing.md.jinja
template/tests/: conftest.py.jinja  test_config.py  test_config.py.jinja  test_main.py.jinja  (+1 more)
tests/: conftest.py  test_main.py
(+21 files in other folders)
